svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mbarbhuilb-final
  name: mbarbhuilb-final
  namespace: mbarbhui-ns
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector: #endpoint creator using pod label
    app: mbarbhui-cisco-app  #this is label of pod
  type: ClusterIP
status:
  loadBalancer: {}
