route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbarbhui-route-rule-1
  namespace: mbarbhui-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.mbarbhui.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbarbhuilb-final #name of the internal svc i.e LB
            port:
              number: 80
